// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/ColorDropdown Custom Colors Example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "200px",
        }
      }
    >
      <div
        className="iot--combobox"
        data-edit-option-text="Create"
        data-testid="combo-wrapper"
        onBlur={[Function]}
        onKeyDown={[Function]}
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          aria-owns={null}
          className="bx--list-box__wrapper"
          role="combobox"
        >
          <label
            className="bx--label"
            htmlFor="myColorDropdown"
            id="downshift-0-label"
          >
            Color
          </label>
          <div
            aria-label="Choose an item"
            className="bx--combo-box iot--color-dropdown iot--combobox-input bx--list-box"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              aria-haspopup={true}
              aria-label="open menu"
              className="bx--list-box__field"
              data-toggle={true}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              role="button"
              tabIndex={-1}
              type="button"
            >
              <input
                aria-activedescendant={null}
                aria-autocomplete="list"
                aria-controls={null}
                aria-labelledby="downshift-0-label"
                autoComplete="off"
                className="bx--text-input bx--text-input--empty"
                data-testid="combo-box"
                disabled={false}
                id="myColorDropdown"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="Filter colors"
                tabIndex="0"
                test-id="color-dropdown"
                type="text"
                value=""
              />
              
              <div
                className="bx--list-box__menu-icon"
              >
                <svg
                  aria-label="Open menu"
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  name="chevron--down"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                  <title>
                    Open menu
                  </title>
                </svg>
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/ColorDropdown Default Example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "200px",
        }
      }
    >
      <div
        className="iot--combobox"
        data-edit-option-text="Create"
        data-testid="combo-wrapper"
        onBlur={[Function]}
        onKeyDown={[Function]}
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          aria-owns={null}
          className="bx--list-box__wrapper"
          role="combobox"
        >
          <label
            className="bx--label"
            htmlFor="myColorDropdown"
            id="downshift-0-label"
          >
            Color
          </label>
          <div
            aria-label="Choose an item"
            className="bx--combo-box iot--color-dropdown iot--combobox-input bx--list-box"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              aria-haspopup={true}
              aria-label="open menu"
              className="bx--list-box__field"
              data-toggle={true}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              role="button"
              tabIndex={-1}
              type="button"
            >
              <input
                aria-activedescendant={null}
                aria-autocomplete="list"
                aria-controls={null}
                aria-labelledby="downshift-0-label"
                autoComplete="off"
                className="bx--text-input bx--text-input--empty"
                data-testid="combo-box"
                disabled={false}
                id="myColorDropdown"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="Filter colors"
                tabIndex="0"
                test-id="color-dropdown"
                type="text"
                value=""
              />
              
              <div
                className="bx--list-box__menu-icon"
              >
                <svg
                  aria-label="Open menu"
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  name="chevron--down"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                  <title>
                    Open menu
                  </title>
                </svg>
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/ColorDropdown No Labels Example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "6rem",
        }
      }
    >
      <div
        className="iot--combobox"
        data-edit-option-text="Create"
        data-testid="combo-wrapper"
        onBlur={[Function]}
        onKeyDown={[Function]}
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          aria-owns={null}
          className="bx--list-box__wrapper"
          role="combobox"
        >
          <label
            className="bx--label"
            htmlFor="myColorDropdown"
            id="downshift-0-label"
          >
            Color
          </label>
          <div
            aria-label="Choose an item"
            className="bx--combo-box iot--color-dropdown iot--combobox-input bx--list-box"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              aria-haspopup={true}
              aria-label="open menu"
              className="bx--list-box__field"
              data-toggle={true}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              role="button"
              tabIndex={-1}
              type="button"
            >
              <input
                aria-activedescendant={null}
                aria-autocomplete="list"
                aria-controls={null}
                aria-labelledby="downshift-0-label"
                autoComplete="off"
                className="bx--text-input"
                data-testid="combo-box"
                disabled={false}
                id="myColorDropdown"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="Filter colors"
                tabIndex="0"
                test-id="color-dropdown"
                type="text"
                value="purple70"
              />
              <div
                aria-label="Clear Selection"
                className="bx--list-box__selection"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
                title="Clear selected item"
              >
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                  />
                </svg>
              </div>
              <div
                className="bx--list-box__menu-icon"
              >
                <svg
                  aria-label="Open menu"
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  name="chevron--down"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                  <title>
                    Open menu
                  </title>
                </svg>
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/ColorDropdown Preset Selection Example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "200px",
        }
      }
    >
      <div
        className="iot--combobox"
        data-edit-option-text="Create"
        data-testid="combo-wrapper"
        onBlur={[Function]}
        onKeyDown={[Function]}
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          aria-owns={null}
          className="bx--list-box__wrapper"
          role="combobox"
        >
          <label
            className="bx--label"
            htmlFor="myColorDropdown"
            id="downshift-0-label"
          >
            Color
          </label>
          <div
            aria-label="Choose an item"
            className="bx--combo-box iot--color-dropdown iot--combobox-input bx--list-box"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              aria-haspopup={true}
              aria-label="open menu"
              className="bx--list-box__field"
              data-toggle={true}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              role="button"
              tabIndex={-1}
              type="button"
            >
              <input
                aria-activedescendant={null}
                aria-autocomplete="list"
                aria-controls={null}
                aria-labelledby="downshift-0-label"
                autoComplete="off"
                className="bx--text-input"
                data-testid="combo-box"
                disabled={false}
                id="myColorDropdown"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="Filter colors"
                tabIndex="0"
                test-id="color-dropdown"
                type="text"
                value="yellow"
              />
              <div
                aria-label="Clear Selection"
                className="bx--list-box__selection"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
                title="Clear selected item"
              >
                <svg
                  aria-hidden={true}
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                  />
                </svg>
              </div>
              <div
                className="bx--list-box__menu-icon"
              >
                <svg
                  aria-label="Open menu"
                  fill="currentColor"
                  focusable="false"
                  height={16}
                  name="chevron--down"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                  />
                  <title>
                    Open menu
                  </title>
                </svg>
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
